video synced with funscript and oscillating device

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
+<app-buttplug></app-buttplug>
+<br />
+<br />
 <app-video-player></app-video-player>
-<app-video-select></app-video-select>
+<app-user-input></app-user-input>
