--- a/src/app/video-player/video-player.component.html
+++ b/src/app/video-player/video-player.component.html
@@ -7,12 +7,18 @@
     theme="dark"
     style="--vm-player-theme: #e86c8b"
   >
-    <vm-video cross-origin poster="https://media.vimejs.com/poster.png">
+
+<!--    <vm-hls version="latest" poster="https://media.vimejs.com/poster.png">-->
+<!--      <source [src]=sanitizer.bypassSecurityTrustUrl(videoService.videoURL.value) type="application/x-mpegURL" />-->
+<!--    </vm-hls>-->
+
+    <vm-video poster="https://media.vimejs.com/poster.png">
       <source
         [src]="sanitizer.bypassSecurityTrustUrl(videoService.videoURL.value)"
         type="video/mp4"
       />
     </vm-video>
+
     <vm-default-ui></vm-default-ui>
   </vm-player>
 </div>
