--- a/src/app/video-player/video-player.component.html
+++ b/src/app/video-player/video-player.component.html
@@ -5,20 +5,22 @@
     (vmCurrentTimeChange)="onTimeUpdate($event)"
     muted
     theme="dark"
-    style="--vm-player-theme: #e86c8b"
+    style="--vm-player-theme: #2a7bc6"
   >
-
-<!--    <vm-hls version="latest" poster="https://media.vimejs.com/poster.png">-->
-<!--      <source [src]=sanitizer.bypassSecurityTrustUrl(videoService.videoURL.value) type="application/x-mpegURL" />-->
-<!--    </vm-hls>-->
-
-    <vm-video poster="https://media.vimejs.com/poster.png">
+    <vm-video *ngIf="!(playerStatus | async)?.error; else hls">
       <source
+        (error)="logError('standard', $event)"
         [src]="sanitizer.bypassSecurityTrustUrl(videoService.videoURL.value)"
         type="video/mp4"
       />
     </vm-video>
 
-    <vm-default-ui></vm-default-ui>
+    <ng-template #hls>
+      <vm-hls (vmError)="logError('hls', $event)" *ngIf="videoService.videoURL.value" version="latest">
+        <source [src]=sanitizer.bypassSecurityTrustUrl(videoService.videoURL.value) type="application/x-mpegURL"/>
+      </vm-hls>
+    </ng-template>
+
+    <vm-default-ui noLoadingScreen="true"></vm-default-ui>
   </vm-player>
 </div>
