feat: video double click fullscreen selector, added github link
chore: rename project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,8 @@
 <app-user-input></app-user-input>
 <br />
 <app-video-player></app-video-player>
+
+<a style="position: absolute;
+    left: 9px;
+    bottom: 1px;
+    font-weight: bold;" href="https://github.com/altJohn335/funscript-player" rel=noreferrer target="_blank"><p>Github</p></a>
