--- a/src/app/video-player/video-player.component.html
+++ b/src/app/video-player/video-player.component.html
@@ -21,6 +21,10 @@
       </vm-hls>
     </ng-template>
 
-    <vm-default-ui noLoadingScreen="true"></vm-default-ui>
+    <vm-ui>
+      <vm-default-ui noLoadingScreen="true">
+        <vm-dbl-click-fullscreen></vm-dbl-click-fullscreen>
+      </vm-default-ui>
+    </vm-ui>
   </vm-player>
 </div>
