feat: add discussion thread link, add state service if Angular in prod. buttplug.service.ts log events if not prod. clean: dropped unused console log

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,15 @@
   ></app-funscript-heatmap>
 </ng-container>
 
-<a style="position: absolute;
+
+<div style="display: grid; position: fixed;
     left: 9px;
     bottom: 1px;
-    font-weight: bold;" href="https://github.com/martinAlt335/funscript-player" rel=noreferrer target="_blank"><p>
-  Github</p></a>
+    font-weight: bold; grid-template-columns: 1fr auto">
+  <a style="" href="https://discuss.eroscripts.com/t/web-funscript-player-enjoy-funscript-videos-on-ios-android-web/35346" rel=noreferrer target="_blank"><p>
+    Discussion Forum</p></a>
+  <a style="margin-left: 10px" href="https://github.com/martinAlt335/funscript-player" rel=noreferrer target="_blank"><p>
+    Github</p></a>
+</div>
+
+
