--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<app-theme-toggle-button style="position: fixed;
+    left: 9px;
+    bottom: 50px;"></app-theme-toggle-button>
 <app-buttplug></app-buttplug>
 <br/>
 <br/>
