ui rework / cleanup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<app-theme-toggle-button style="position: fixed;
-    left: 9px;
-    bottom: 50px;"></app-theme-toggle-button>
+<div style="margin-left: 10px">
+<!--<app-theme-toggle-button style="position: fixed;-->
+<!--    left: 9px;-->
+<!--    bottom: 50px;"></app-theme-toggle-button>-->
 <app-buttplug></app-buttplug>
-<br/>
-<br/>
 <app-user-input></app-user-input>
 <br/>
 <app-video-player></app-video-player>
@@ -28,3 +27,4 @@
 </div>
 
 
+</div>
