--- a/src/app/user-input/user-input.component.html
+++ b/src/app/user-input/user-input.component.html
@@ -1,3 +1,5 @@
+
+<nz-card style="width:600px; margin-top: 25px">
 <div class="container">
   <input
     type="file"
@@ -6,14 +8,15 @@
     accept="funscript"
     (change)="onChangeFileInput('funscript')"
   />
-  <br />
   <button
-    mat-stroked-button
+    nz-button nzType="primary"
     class="file-select-button"
     (click)="onClickFileInputButton('funscript')"
   >
     Select funscript file
   </button>
+
+  <br/>
 
   <span class="file-name" *ngIf="(userInputService.funscriptFile | async)?.name?.length == 0; else fileName">
     No funscript file selected!</span
@@ -25,7 +28,6 @@
 </div>
 
 <div class="container">
-  <br />
   <input
     type="file"
     style="display: none"
@@ -33,47 +35,57 @@
     accept="video/*"
     (change)="onChangeFileInput('video')"
   />
-  <br />
-  <button
-    mat-stroked-button
-    class="file-select-button"
-    [disabled]="(userInputService.funscriptFile | async)?.name?.length == 0"
-    (click)="onClickFileInputButton('video')"
-  >
-    Select video
-  </button>
+  <br/>
+
+
+  <nz-breadcrumb>
+    <nz-breadcrumb-item>
+      <button
+        nz-button nzType="primary"
+        class="file-select-button"
+        [disabled]="(userInputService.funscriptFile | async)?.name?.length == 0"
+        (click)="onClickFileInputButton('video')"
+      >
+        Select video
+      </button>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+      <form
+        style="display: inline-block"
+        nz-form
+        [formGroup]="urlForm"
+        (ngSubmit)="submitURL()"
+        (change)="cdr.markForCheck()"
+      >
+        <nz-form-item>
+          <nz-form-control>
+            <div style="display: grid; grid-template-columns: auto 1fr">
+              <div>
+                <input nz-input name="url" type="url" id="url" placeholder="Enter a URL" formControlName="url">
+              </div>
+              <div>
+                <button [disabled]="!urlForm.valid || (userInputService.funscriptFile | async)?.name?.length == 0"
+                        style="margin-left: 5px"
+                        nz-button nzType="primary"
+                        type="submit">Load Video
+                </button>
+              </div>
+            </div>
+          </nz-form-control>
+        </nz-form-item>
+      </form>
+    </nz-breadcrumb-item>
+  </nz-breadcrumb>
 
   <span class="file-name" *ngIf="video.value === undefined; else videoName">
     No video selected!</span
   >
-
+  <br/>
+  <span> Accepts video files and HLS streams.</span>
   <ng-template #videoName>
     <span class="file-name"> {{ (video | async)?.name }}</span>
   </ng-template>
 
-  <form
-    [formGroup]="urlForm"
-    (ngSubmit)="submitURL()"
-    (change)="cdr.markForCheck()"
-  >
-    <mat-form-field class="example-full-width" appearance="standard">
-      <mat-label>Video URL</mat-label>
-      <input
-        id="url"
-        type="url"
-        matInput
-        placeholder="Enter a URL"
-        formControlName="url"
-      />
-    </mat-form-field>
-    <button
-      [disabled]="!urlForm.valid || (userInputService.funscriptFile | async)?.name?.length == 0"
-      style="margin-left: 5px"
-      mat-stroked-button
-      type="submit"
-    >
-      Load Video
-    </button>
-    <span> Accepts video files and HLS streams.</span>
-  </form>
+
 </div>
+</nz-card>
