--- a/src/app/buttplug/buttplug.component.html
+++ b/src/app/buttplug/buttplug.component.html
@@ -1,29 +1,36 @@
-<button
-  mat-stroked-button
-  [disabled]="!buttPlug.HasWebBluetooth"
-  (click)="buttPlug.ConnectInBrowser()"
->
-  {{
-    buttPlug.HasWebBluetooth ? "Connect In Browser" : "Requires WebBluetooth"
-  }}
-</button>
+<nz-card style="width:600px; margin-top: 25px">
+  <div class="grd">
+    <button
+      nz-button nzType="primary"
+      [disabled]="!buttPlug.HasWebBluetooth"
+      (click)="buttPlug.ConnectInBrowser()"
+    >
+      {{
+      buttPlug.HasWebBluetooth ? "Connect In Browser" : "Requires WebBluetooth"
+      }}
+    </button>
 
-<ng-container>
-  <button
-    mat-stroked-button
-    [disabled]="!(buttPlug.isConnected | async)"
-    (click)="buttPlug.Disconnect()"
-  >
-    Disconnect
-  </button>
+    <ng-container>
+      <button
+        nz-button nzType="primary"
+        [disabled]="!(buttPlug.isConnected | async)"
+        (click)="buttPlug.Disconnect()"
+      >
+        Disconnect
+      </button>
 
-  <button
-    mat-stroked-button
-    [disabled]="!(buttPlug.isConnected | async)"
-    (click)="buttPlug.ToggleScanning()"
-  >
-    {{ buttPlug.isScanning ? "Stop Scanning" : "Start Scanning" }}
-  </button>
-</ng-container>
+      <button
+        nz-button nzType="primary"
+        [disabled]="!(buttPlug.isConnected | async)"
+        (click)="buttPlug.ToggleScanning()"
+      >
+        {{ buttPlug.isScanning ? "Stop Scanning" : "Start Scanning" }}
+      </button>
+    </ng-container>
 
-<span *ngIf="buttPlug.isConnecting">Connecting to device...</span>
+    <span *ngIf="buttPlug.isConnecting">Connecting to device...</span>
+  </div>
+</nz-card>
+
+
+
