--- a/src/app/theme-toggle-button/theme-toggle-button.component.html
+++ b/src/app/theme-toggle-button/theme-toggle-button.component.html
@@ -1,4 +1,6 @@
-<mat-slide-toggle
-  [checked]="(themeService.colorScheme | async) === 'dark'"
-  (click)="themeService.switch()"
->Dark mode</mat-slide-toggle>
+<!--<mat-slide-toggle-->
+<!--  [checked]="(themeService.colorScheme | async) === 'dark'"-->
+<!--  (click)="themeService.switch()"-->
+<!--&gt;Dark mode</mat-slide-toggle>-->
+
+<nz-switch [(ngModel)]="switchValue" (click)="themeService.switch()">Dark mode</nz-switch>
