--- a/src/app/theme-toggle-button/theme-toggle-button.component.html
+++ b/src/app/theme-toggle-button/theme-toggle-button.component.html
@@ -3,4 +3,6 @@
 <!--  (click)="themeService.switch()"-->
 <!--&gt;Dark mode</mat-slide-toggle>-->
 
-<nz-switch [(ngModel)]="switchValue" (click)="themeService.switch()">Dark mode</nz-switch>
+<nz-switch [(ngModel)]="switchValue" (click)="themeService.switch()"
+  >Dark mode</nz-switch
+>
