feat: format funscript controller displayed time to readable format, ui alignment on load-funscript, controller, heatmap. fix: fixed bug where interval doubles-up when play/pause event is not caught in the 100ms interval check.

--- a/src/app/funscript-heatmap/funscript-heatmap.component.html
+++ b/src/app/funscript-heatmap/funscript-heatmap.component.html
@@ -1,7 +1,7 @@
 <div
   [style.width]="width + 'px'"
   [style.height]="height + 'px'"
-  style="position: relative"
+  style="position: relative; margin-left: 44px;"
 >
   <canvas
     [style.width]="width + 'px'"
