--- a/src/app/user-flow/user-flow.component.html
+++ b/src/app/user-flow/user-flow.component.html
@@ -17,7 +17,8 @@
   >
     <app-funscript-heatmap
       [funscript]="userInputService.funscriptFile.value.file"
-      [width]="550"
+      [width]="501"
+      [height]="65"
     ></app-funscript-heatmap>
   </ng-container>
 </nz-card>
