--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-nz-card > div {
-  padding-top: 0!important
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import '../node_modules/ng-zorro-antd/ng-zorro-antd.dark';
