feat(*): add logo refactor(index.html): add meta properties refactor(upload): improve UI for mobile devices

--- a/src/app/component/pure/video-upload/video-upload.component.html
+++ b/src/app/component/pure/video-upload/video-upload.component.html
@@ -1,6 +1,8 @@
 <div class="flex w-full">
-  <h2 class="text-lg">Upload Video</h2>
-  <span class="ml-auto">Accepts local video or streaming URL</span>
+  <h2 class="text-base md:text-lg">Upload Video</h2>
+  <span class="ml-auto hidden md:inline"
+    >Accepts local video or streaming URL</span
+  >
 </div>
 
 <div class="flex flex-col gap-4">
