--- a/src/app/component/pure/funscript-upload/funscript-upload.component.html
+++ b/src/app/component/pure/funscript-upload/funscript-upload.component.html
@@ -1,6 +1,6 @@
 <div class="flex w-full">
-  <h2 class="text-lg">Upload Funscript</h2>
-  <span class="ml-auto">Accepts .funscript file</span>
+  <h2 class="text-base md:text-lg">Upload Funscript</h2>
+  <span class="ml-auto hidden md:inline">Accepts .funscript file</span>
 </div>
 
 <div class="flex flex-col gap-4">
