--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,3 +15,29 @@
     <app-playback-container></app-playback-container>
   </nz-card>
 </div>
+
+<div
+  style="
+    display: grid;
+    position: fixed;
+    left: 9px;
+    bottom: 1px;
+    font-weight: bold;
+    grid-template-columns: 1fr auto;
+  "
+>
+  <a
+    style=""
+    href="https://discuss.eroscripts.com/t/web-funscript-player-enjoy-funscript-videos-on-ios-android-web/35346"
+    rel="noreferrer"
+    target="_blank"
+    ><p>Discussion Forum</p></a
+  >
+  <a
+    style="margin-left: 10px"
+    href="https://github.com/martinAlt335/funscript-player"
+    rel="noreferrer"
+    target="_blank"
+    ><p>Github</p></a
+  >
+</div>
