fix(upload): local file upload should not error, use customRequest to bypass

--- a/src/app/component/pure/funscript-upload/funscript-upload.component.html
+++ b/src/app/component/pure/funscript-upload/funscript-upload.component.html
@@ -8,6 +8,7 @@
     <nz-upload
       nzType="drag"
       nzAccept=".funscript"
+      [nzCustomRequest]="customRequest"
       [nzShowUploadList]="false"
       (nzChange)="handleChange($event)"
     >
