--- a/src/app/component/pure/video-upload/video-upload.component.html
+++ b/src/app/component/pure/video-upload/video-upload.component.html
@@ -11,6 +11,7 @@
     <nz-upload
       nzType="drag"
       nzAccept="video/*"
+      [nzCustomRequest]="customRequest"
       [nzShowUploadList]="false"
       (nzChange)="handleFileUpload($event)"
     >
