feat(config-panel): add check for WebBluetooth and warning feat(config-panel): add sync adjustment panel refactor(funscript-action): use offset in calculation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,45 @@
-<div class="m-4">
-  <nz-card>
-    <app-buttplug-control-panel></app-buttplug-control-panel>
-  </nz-card>
-</div>
+<div class="pb-12">
+  <div class="m-4">
+    <nz-card>
+      <app-buttplug-control-panel></app-buttplug-control-panel>
+    </nz-card>
+  </div>
 
-<div class="m-4">
-  <nz-card>
-    <app-upload-container></app-upload-container>
-  </nz-card>
-</div>
+  <div class="m-4">
+    <nz-card>
+      <app-upload-container></app-upload-container>
+    </nz-card>
+  </div>
 
-<div class="m-4">
-  <nz-card>
-    <app-playback-container></app-playback-container>
-  </nz-card>
-</div>
+  <div class="m-4">
+    <nz-card>
+      <app-playback-container></app-playback-container>
+    </nz-card>
+  </div>
 
-<div
-  style="
-    display: grid;
-    position: fixed;
-    left: 9px;
-    bottom: 1px;
-    font-weight: bold;
-    grid-template-columns: 1fr auto;
-  "
->
-  <a
-    style=""
-    href="https://discuss.eroscripts.com/t/web-funscript-player-enjoy-funscript-videos-on-ios-android-web/35346"
-    rel="noreferrer"
-    target="_blank"
-    ><p>Discussion Forum</p></a
+  <div
+    style="
+      display: grid;
+      position: fixed;
+      left: 9px;
+      bottom: 1px;
+      font-weight: bold;
+      grid-template-columns: 1fr auto;
+    "
   >
-  <a
-    style="margin-left: 10px"
-    href="https://github.com/martinAlt335/funscript-player"
-    rel="noreferrer"
-    target="_blank"
-    ><p>Github</p></a
-  >
+    <a
+      style=""
+      href="https://discuss.eroscripts.com/t/web-funscript-player-enjoy-funscript-videos-on-ios-android-web/35346"
+      rel="noreferrer"
+      target="_blank"
+      ><p>Discussion Forum</p></a
+    >
+    <a
+      style="margin-left: 10px"
+      href="https://github.com/martinAlt335/funscript-player"
+      rel="noreferrer"
+      target="_blank"
+      ><p>Github</p></a
+    >
+  </div>
 </div>
