feat(config-panel): add device response delay and stroke range

--- a/src/app/component/container/playback-container/playback-container.component.html
+++ b/src/app/component/container/playback-container/playback-container.component.html
@@ -19,6 +19,7 @@
 
   <div class="md:max-w-2xl mx-auto" *ngIf="funscript">
     <app-funscript-heatmap
+      class="w-full"
       [heightPx]="80"
       [funscript]="funscript"
     ></app-funscript-heatmap>
