--- a/src/app/component/pure/funscript-heatmap/funscript-heatmap.component.html
+++ b/src/app/component/pure/funscript-heatmap/funscript-heatmap.component.html
@@ -1,7 +1,3 @@
 <div [style.width]="widthPx + 'px'" [style.height]="heightPx + 'px'">
-  <canvas
-    [style.width]="widthPx + 'px'"
-    [style.height]="heightPx + 'px'"
-    #heatmap
-  ></canvas>
+  <canvas class="w-full" [style.height]="heightPx + 'px'" #heatmap></canvas>
 </div>
