refactor(media-upload): html say audio or video

--- a/src/app/component/pure/media-upload/media-upload.component.html
+++ b/src/app/component/pure/media-upload/media-upload.component.html
@@ -1,7 +1,7 @@
 <div class="flex w-full">
-  <h2 class="text-base md:text-lg">Upload Video</h2>
+  <h2 class="text-base md:text-lg">Upload Audio or Video</h2>
   <span class="ml-auto hidden md:inline"
-    >Accepts local video or streaming URL</span
+    >Accepts local audio, video or streaming URL</span
   >
 </div>
 
@@ -18,7 +18,7 @@
       <p class="ant-upload-drag-icon">
         <span nz-icon nzType="upload"></span>
       </p>
-      <p class="ant-upload-text">Video Upload</p>
+      <p class="ant-upload-text">Audio/Video Upload</p>
     </nz-upload>
   </div>
 
